[gd_scene load_steps=34 format=2]

[ext_resource path="res://source/scenes/gui/gui_debug_healthbar.tscn" type="PackedScene" id=1]
[ext_resource path="res://source/scenes/entity/state_controller.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/resource/animation/SnailIdle.tres" type="Animation" id=3]
[ext_resource path="res://assets/resource/animation/SnailMove.tres" type="Animation" id=4]
[ext_resource path="res://assets/resource/animation/SnailHide.tres" type="Animation" id=5]
[ext_resource path="res://assets/materials/entity/snail_shell.tres" type="Material" id=6]
[ext_resource path="res://assets/materials/entity/snail_eyes.tres" type="Material" id=7]
[ext_resource path="res://assets/materials/entity/snail_body.tres" type="Material" id=8]
[ext_resource path="res://assets/gui/theme/theme_options.tres" type="Theme" id=9]
[ext_resource path="res://assets/model/snail_body.mesh" type="ArrayMesh" id=10]
[ext_resource path="res://assets/model/snail_eye_left.mesh" type="ArrayMesh" id=11]
[ext_resource path="res://assets/model/snail_shell.mesh" type="ArrayMesh" id=12]
[ext_resource path="res://assets/model/snail_eye_right.mesh" type="ArrayMesh" id=13]
[ext_resource path="res://assets/resource/animation/SnailRollFront.tres" type="Animation" id=14]
[ext_resource path="res://assets/resource/animation/SnailHidden.tres" type="Animation" id=15]
[ext_resource path="res://assets/resource/animation/SnailFlip.tres" type="Animation" id=16]
[ext_resource path="res://assets/resource/animation/SnailRollBack.tres" type="Animation" id=17]
[ext_resource path="res://source/scripts/entity/snail/SnailStateJump.gd" type="Script" id=18]
[ext_resource path="res://source/scripts/entity/snail/SnailStateDodg.gd" type="Script" id=19]
[ext_resource path="res://source/scripts/entity/snail/SnailStateHide.gd" type="Script" id=20]
[ext_resource path="res://source/scripts/entity/snail/SnailStateMove.gd" type="Script" id=21]
[ext_resource path="res://source/scripts/entity/snail/SnailStateFall.gd" type="Script" id=22]
[ext_resource path="res://source/scripts/entity/snail/SnailStateRoll.gd" type="Script" id=23]
[ext_resource path="res://source/scripts/entity/snail/SnailStateIdle.gd" type="Script" id=24]
[ext_resource path="res://source/scripts/entity/snail/Snail.gd" type="Script" id=25]
[ext_resource path="res://assets/resource/animation/SnailFall.tres" type="Animation" id=26]
[ext_resource path="res://assets/resource/animation/SnailJump.tres" type="Animation" id=27]

[sub_resource type="PhysicsMaterial" id=32]
friction = 0.98

[sub_resource type="Skin" id=36]
resource_name = "Skin"
bind_count = 24
bind/0/name = "Body"
bind/0/bone = -1
bind/0/pose = Transform( 1, 1.10291e-23, -2.22045e-16, -2.22045e-16, 9.93411e-08, -1, 1.10291e-23, 1, 9.93411e-08, 5.00252e-17, -0.0753159, -0.0493908 )
bind/1/name = "Head"
bind/1/bone = -1
bind/1/pose = Transform( 1, 0, -1.09564e-30, 1.09564e-30, 0, -1, 0, 1, 0, 1.33362e-16, -0.375316, -0.0493909 )
bind/2/name = "Stalk4.L"
bind/2/bone = -1
bind/2/pose = Transform( 0.984805, 0.173665, -2.78531e-05, -0.173026, 0.981169, -0.0858413, -0.0148803, 0.0845416, 0.996309, 0.0353542, -0.307008, 0.508579 )
bind/3/name = "Stalk3.L"
bind/3/bone = -1
bind/3/pose = Transform( 0.984805, 0.173665, -2.78717e-05, -0.173026, 0.981169, -0.0858413, -0.0148803, 0.0845416, 0.996309, 0.0353541, -0.407551, 0.508579 )
bind/4/name = "Stalk2.L"
bind/4/bone = -1
bind/4/pose = Transform( 0.984805, 0.173665, -2.78885e-05, -0.173026, 0.981169, -0.0858413, -0.0148803, 0.0845416, 0.996309, 0.0353541, -0.508095, 0.508579 )
bind/5/name = "Stalk1.L"
bind/5/bone = -1
bind/5/pose = Transform( 0.984805, 0.173665, -2.79564e-05, -0.173026, 0.981169, -0.0858414, -0.0148802, 0.0845416, 0.996309, 0.0353542, -0.608638, 0.508579 )
bind/6/name = "Eye.L"
bind/6/bone = -1
bind/6/pose = Transform( 0.98911, 0.146989, 0.0074968, -0.146993, 0.989138, -2.12225e-07, -0.00741538, -0.001102, 0.999972, 0.0575216, -0.661709, 0.567162 )
bind/7/name = "EyeCenter.L"
bind/7/bone = -1
bind/7/pose = Transform( 1, 1.225e-08, 4.65661e-09, -6.51929e-09, 4.3842e-07, -1, -7.87168e-08, 1, -2.67755e-08, 0.16407, -0.564601, -0.780284 )
bind/8/name = "Stalk4.R"
bind/8/bone = -1
bind/8/pose = Transform( 0.984805, -0.173665, 2.78531e-05, 0.173026, 0.981169, -0.0858413, 0.0148803, 0.0845416, 0.996309, -0.0326979, -0.306541, 0.508619 )
bind/9/name = "Stalk3.R"
bind/9/bone = -1
bind/9/pose = Transform( 0.984805, -0.173665, 2.78717e-05, 0.173026, 0.981169, -0.0858413, 0.0148803, 0.0845416, 0.996309, -0.0326978, -0.407085, 0.508619 )
bind/10/name = "Stalk2.R"
bind/10/bone = -1
bind/10/pose = Transform( 0.984805, -0.173665, 2.78428e-05, 0.173026, 0.981169, -0.0858413, 0.0148803, 0.0845416, 0.996309, -0.0326979, -0.507628, 0.508619 )
bind/11/name = "Stalk1.R"
bind/11/bone = -1
bind/11/pose = Transform( 0.984805, -0.173665, 2.79555e-05, 0.173026, 0.981169, -0.0858414, 0.0148802, 0.0845416, 0.996309, -0.0326979, -0.608171, 0.508619 )
bind/12/name = "Eye.R"
bind/12/bone = -1
bind/12/pose = Transform( 0.98911, -0.146989, -0.0074968, 0.146993, 0.989138, -2.12225e-07, 0.00741538, -0.001102, 0.999972, -0.0548536, -0.661313, 0.567182 )
bind/13/name = "EyeCenter.R"
bind/13/bone = -1
bind/13/pose = Transform( 1, -1.22473e-08, -4.65661e-10, 1.11759e-08, 4.38071e-07, -1, 7.87223e-08, 1, 3.72529e-09, -0.16407, -0.564601, -0.780284 )
bind/14/name = "EyeMainController"
bind/14/bone = -1
bind/14/pose = Transform( 1, -5.85619e-37, -1.09564e-30, 1.09564e-30, -5.34499e-07, -1, 1.17124e-36, 1, -5.34499e-07, -0.0216394, -0.878254, -0.783753 )
bind/15/name = "EyeController.L"
bind/15/bone = -1
bind/15/pose = Transform( 1, 3.13891e-41, -1.09564e-30, 1.09564e-30, 2.86491e-11, -1, -6.27782e-41, 1, 2.86491e-11, 0.16407, -0.822194, -0.780284 )
bind/16/name = "EyeController.R"
bind/16/bone = -1
bind/16/pose = Transform( 1, 3.13891e-41, -1.09564e-30, 1.09564e-30, 2.86491e-11, -1, -6.27782e-41, 1, 2.86491e-11, -0.16407, -0.822194, -0.780284 )
bind/17/name = "StalkController.R"
bind/17/bone = -1
bind/17/pose = Transform( 0.999972, 0, -0.00749676, 0, 1, 0, 0.00749676, 0, 0.999972, -0.16637, -0.746691, 0.566346 )
bind/18/name = "StalkController.L"
bind/18/bone = -1
bind/18/pose = Transform( 0.999972, 0, 0.00749676, 0, 1, 0, -0.00749676, 0, 0.999972, 0.169067, -0.746691, 0.566326 )
bind/19/name = "Foot"
bind/19/bone = -1
bind/19/pose = Transform( -1, 0, 0, 0, 0, 1, 0, 1, 0, -6.67487e-17, 0.0753158, -0.0493908 )
bind/20/name = "Tail"
bind/20/bone = -1
bind/20/pose = Transform( -1, 0, -1.19785e-18, -1.19785e-18, 0, 1, 0, 1, 0, -6.64795e-17, -0.224684, -0.0493908 )
bind/21/name = "TailController"
bind/21/bone = -1
bind/21/pose = Transform( -1, 0, 0, 0, 0, 1, 0, 1, 0, -6.85454e-17, -0.524684, -0.0493908 )
bind/22/name = "HeadController"
bind/22/bone = -1
bind/22/pose = Transform( 1, 0, 1.07806e-17, 1.07806e-17, 0, -1, 0, 1, 0, 1.40085e-16, -0.623617, -0.0493909 )
bind/23/name = "Mantle"
bind/23/bone = -1
bind/23/pose = Transform( 1, -2.70234e-16, 2.70234e-16, 2.70234e-16, 1, 7.30266e-32, -2.70234e-16, 7.30266e-32, 1, 1.10197e-16, -0.251689, 0.0753158 )

[sub_resource type="SphereShape" id=28]

[sub_resource type="BoxShape" id=30]

[sub_resource type="SphereShape" id=31]

[sub_resource type="Animation" id=41]
resource_name = "RESET"
tracks/0/type = "value"
tracks/0/path = NodePath("Armature:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, -0.45, 0.05 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Armature:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}

[node name="Snail" type="RigidBody"]
collision_mask = 13
mode = 2
mass = 0.14
physics_material_override = SubResource( 32 )
gravity_scale = 0.0
continuous_cd = true
contacts_reported = 1
contact_monitor = true
can_sleep = false
script = ExtResource( 25 )

[node name="StateController" parent="." instance=ExtResource( 2 )]

[node name="Idle" type="Node" parent="StateController"]
script = ExtResource( 24 )

[node name="Move" type="Node" parent="StateController"]
script = ExtResource( 21 )

[node name="Jump" type="Node" parent="StateController"]
script = ExtResource( 18 )

[node name="Fall" type="Node" parent="StateController"]
script = ExtResource( 22 )

[node name="Hide" type="Node" parent="StateController"]
script = ExtResource( 20 )

[node name="Roll" type="Node" parent="StateController"]
script = ExtResource( 23 )

[node name="Dodg" type="Node" parent="StateController"]
script = ExtResource( 19 )

[node name="Armature" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.45, 0.05 )

[node name="Skeleton" type="Skeleton" parent="Armature"]
bones/0/name = "Body"
bones/0/parent = -1
bones/0/rest = Transform( 1, -2.22045e-16, 0, 0, 0, 1, -2.22045e-16, -1, 0, -6.67487e-17, 0.0493908, -0.0753158 )
bones/0/enabled = true
bones/0/bound_children = [  ]
bones/1/name = "Head"
bones/1/parent = 0
bones/1/rest = Transform( 1, 2.22045e-16, 1.10291e-23, -2.22045e-16, 1, 9.93411e-08, 1.10291e-23, -9.93411e-08, 1, 5.44735e-25, 0.3, -3.1374e-11 )
bones/1/enabled = true
bones/1/bound_children = [  ]
bones/2/name = "Stalk4.L"
bones/2/parent = 1
bones/2/rest = Transform( 0.984805, -0.173026, -0.0148803, 2.78354e-05, 0.0858412, -0.996309, 0.173665, 0.981169, 0.0845417, -0.0803696, 0.157739, 0.2027 )
bones/2/enabled = true
bones/2/bound_children = [  ]
bones/3/name = "Stalk3.L"
bones/3/parent = 2
bones/3/rest = Transform( 1, -8.90089e-08, 1.16543e-08, 8.90089e-08, 1, 3.27127e-08, -1.16543e-08, -3.27127e-08, 1, 1.66438e-10, 0.100543, -3.08501e-08 )
bones/3/enabled = true
bones/3/bound_children = [  ]
bones/4/name = "Stalk2.L"
bones/4/parent = 3
bones/4/rest = Transform( 1, -2.19004e-08, 1.61481e-08, 2.19004e-08, 1, -2.38651e-08, -1.61481e-08, 2.38651e-08, 1, 1.21508e-09, 0.100543, 1.00117e-08 )
bones/4/enabled = true
bones/4/bound_children = [  ]
bones/5/name = "Stalk1.L"
bones/5/parent = 4
bones/5/rest = Transform( 1, 1.54783e-07, 8.13943e-08, -1.54783e-07, 1, 4.38886e-08, -8.13943e-08, -4.38886e-08, 1, 1.54432e-09, 0.100543, -3.67872e-08 )
bones/5/enabled = true
bones/5/bound_children = [  ]
bones/6/name = "Eye.L"
bones/6/parent = 5
bones/6/rest = Transform( 0.999606, 0.0270187, -0.00752201, -0.0275642, 0.995945, -0.0856369, 0.00517771, 0.0858106, 0.996298, -2.29011e-09, 0.100543, -4.02797e-08 )
bones/6/enabled = true
bones/6/bound_children = [  ]
bones/7/name = "EyeCenter.L"
bones/7/parent = 6
bones/7/rest = Transform( 0.98911, -0.00749677, 0.146989, -0.146993, 2.38419e-07, 0.989137, -0.00741538, -0.999972, -0.00110173, 0.00569856, 0.134216, 0.0029342 )
bones/7/enabled = true
bones/7/bound_children = [ NodePath("BoneAttachment") ]
bones/8/name = "Stalk4.R"
bones/8/parent = 1
bones/8/rest = Transform( 0.984805, 0.173026, 0.0148803, -2.78354e-05, 0.0858412, -0.996309, -0.173665, 0.981169, 0.0845417, 0.0776723, 0.157739, 0.2027 )
bones/8/enabled = true
bones/8/bound_children = [  ]
bones/9/name = "Stalk3.R"
bones/9/parent = 8
bones/9/rest = Transform( 1, 8.90089e-08, -1.16543e-08, -8.90089e-08, 1, 3.27127e-08, 1.16543e-08, -3.27127e-08, 1, 3.55885e-09, 0.100543, -5.36675e-08 )
bones/9/enabled = true
bones/9/bound_children = [  ]
bones/10/name = "Stalk2.R"
bones/10/parent = 9
bones/10/rest = Transform( 1, -5.45909e-08, 2.41271e-08, 5.45909e-08, 1, -2.36323e-08, -2.41271e-08, 2.36323e-08, 1, 2.51021e-09, 0.100543, -1.28057e-08 )
bones/10/enabled = true
bones/10/bound_children = [  ]
bones/11/name = "Stalk1.R"
bones/11/parent = 10
bones/11/rest = Transform( 1, -8.58092e-08, -1.19961e-07, 8.58092e-08, 1, 4.37722e-08, 1.19961e-07, -4.37722e-08, 1, 1.60981e-09, 0.100543, -5.45988e-08 )
bones/11/enabled = true
bones/11/bound_children = [  ]
bones/12/name = "Eye.R"
bones/12/parent = 11
bones/12/rest = Transform( 0.999606, -0.0270187, 0.00752201, 0.0275642, 0.995945, -0.0856369, -0.00517771, 0.0858106, 0.996298, 6.5429e-09, 0.100543, -3.49246e-09 )
bones/12/enabled = true
bones/12/bound_children = [  ]
bones/13/name = "EyeCenter.R"
bones/13/parent = 12
bones/13/rest = Transform( 0.98911, 0.00749677, -0.146989, 0.146993, 2.38419e-07, 0.989137, 0.00741538, -0.999972, -0.00110173, -0.00303061, 0.134613, 0.00295423 )
bones/13/enabled = true
bones/13/bound_children = [ NodePath("BoneAttachment2") ]
bones/14/name = "EyeMainController"
bones/14/parent = 1
bones/14/rest = Transform( 1, -1.56945e-43, 5.85619e-37, -1.56945e-43, 1, 5.34499e-07, -5.85619e-37, -5.34499e-07, 1, 0.0216394, 0.502939, 0.734361 )
bones/14/enabled = true
bones/14/bound_children = [  ]
bones/15/name = "EyeController.L"
bones/15/parent = 14
bones/15/rest = Transform( 1, -1.56945e-43, -5.8565e-37, -1.56945e-43, 1, -5.34528e-07, 5.8565e-37, 5.34528e-07, 1, -0.18571, -0.0560609, -0.00346837 )
bones/15/enabled = true
bones/15/bound_children = [  ]
bones/16/name = "EyeController.R"
bones/16/parent = 14
bones/16/rest = Transform( 1, -1.56945e-43, -5.8565e-37, -1.56945e-43, 1, -5.34528e-07, 5.8565e-37, 5.34528e-07, 1, 0.142431, -0.0560609, -0.00346837 )
bones/16/enabled = true
bones/16/bound_children = [  ]
bones/17/name = "StalkController.R"
bones/17/parent = 1
bones/17/rest = Transform( 0.999972, -2.32831e-10, 0.00749676, 0.00749676, 1.19209e-07, -0.999972, -2.32831e-10, 1, 1.19209e-07, 0.16212, 0.192262, 0.6973 )
bones/17/enabled = true
bones/17/bound_children = [  ]
bones/18/name = "StalkController.L"
bones/18/parent = 1
bones/18/rest = Transform( 0.999972, 2.32831e-10, -0.00749676, -0.00749676, 1.19209e-07, -0.999972, 2.32831e-10, 1, 1.19209e-07, -0.164817, 0.192262, 0.6973 )
bones/18/enabled = true
bones/18/bound_children = [  ]
bones/19/name = "Foot"
bones/19/parent = -1
bones/19/rest = Transform( -1, 0, 0, 0, 0, 1, 0, 1, 0, -6.67487e-17, 0.0493908, -0.0753158 )
bones/19/enabled = true
bones/19/bound_children = [  ]
bones/20/name = "Tail"
bones/20/parent = 19
bones/20/rest = Transform( 1, 1.19785e-18, 0, -1.19785e-18, 1, 0, 0, 0, 1, 0, 0.3, 0 )
bones/20/enabled = true
bones/20/bound_children = [  ]
bones/21/name = "TailController"
bones/21/parent = -1
bones/21/rest = Transform( -1, 0, 0, 0, 0, 1, 0, 1, 0, -6.85454e-17, 0.0493908, 0.524684 )
bones/21/enabled = true
bones/21/bound_children = [  ]
bones/22/name = "HeadController"
bones/22/parent = -1
bones/22/rest = Transform( 1, 1.07806e-17, 0, 0, 0, 1, 1.07806e-17, -1, 0, -1.33362e-16, 0.0493909, -0.623617 )
bones/22/enabled = true
bones/22/bound_children = [  ]
bones/23/name = "Mantle"
bones/23/parent = -1
bones/23/rest = Transform( 1, 2.70234e-16, -2.70234e-16, -2.70234e-16, 1, 3.65133e-32, 2.70234e-16, 3.65133e-32, 1, -2.18294e-17, 0.251689, -0.0753158 )
bones/23/enabled = true
bones/23/bound_children = [  ]

[node name="EyeAnchor" type="BoneAttachment" parent="Armature/Skeleton"]
transform = Transform( 1, 0, 0, 0, 0, 1, 0, -1, 0, 0.397249, 0.780981, -0.561497 )
bone_name = "BoneEyeballRight"

[node name="EyePoint" type="Spatial" parent="Armature/Skeleton/EyeAnchor"]
unique_name_in_owner = true

[node name="BoneAttachment" type="BoneAttachment" parent="Armature/Skeleton"]
transform = Transform( 1, 5.54137e-08, 7.8463e-08, 3.61168e-07, -5.86733e-08, 0.999999, 8.3819e-09, -1, 1.07917e-07, -0.16407, 0.780282, -0.564601 )
bone_name = "EyeCenter.L"

[node name="EyeRight" type="MeshInstance" parent="Armature/Skeleton/BoneAttachment"]
unique_name_in_owner = true
transform = Transform( 1, 3.8078e-06, 7.96219e-07, 7.96222e-07, -4.76837e-07, -0.999999, -3.8078e-06, 1, -4.76837e-07, 0.369818, -0.737042, -0.570603 )
mesh = ExtResource( 13 )
material/0 = ExtResource( 7 )

[node name="BoneAttachment2" type="BoneAttachment" parent="Armature/Skeleton"]
transform = Transform( 1, -5.82077e-08, -9.33669e-08, -3.31365e-07, -5.84405e-08, 0.999999, -1.11759e-08, -1, 1.08383e-07, 0.16407, 0.780282, -0.564601 )
bone_name = "EyeCenter.R"

[node name="EyeLeft" type="MeshInstance" parent="Armature/Skeleton/BoneAttachment2"]
unique_name_in_owner = true
transform = Transform( 1, -3.747e-06, -5.81117e-07, -5.81119e-07, -3.57628e-07, -0.999999, 3.747e-06, 1, -3.57627e-07, 0.0416807, -0.737043, -0.570601 )
mesh = ExtResource( 11 )
material/0 = ExtResource( 7 )

[node name="Body" type="MeshInstance" parent="Armature/Skeleton"]
unique_name_in_owner = true
mesh = ExtResource( 10 )
skin = SubResource( 36 )
material/0 = ExtResource( 8 )

[node name="Shell" type="MeshInstance" parent="Armature/Skeleton"]
unique_name_in_owner = true
mesh = ExtResource( 12 )
skin = SubResource( 36 )
material/0 = ExtResource( 6 )
material/1 = ExtResource( 8 )

[node name="PlayerCollision" type="CollisionShape" parent="."]
transform = Transform( 0.45, 0, 0, 0, 0.45, 0, 0, 0, 0.45, 0, 0, 0 )
shape = SubResource( 28 )

[node name="AffectArea" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.42299, 0 )

[node name="CollisionShape" type="CollisionShape" parent="AffectArea"]
transform = Transform( 0.36, 0, 0, 0, 0.5, 0, 0, 0, 0.72, 0, 0.45, 0 )
shape = SubResource( 30 )

[node name="Checkers" type="Spatial" parent="."]

[node name="ClimbingRays" type="Spatial" parent="Checkers"]
unique_name_in_owner = true

[node name="Ray" type="RayCast" parent="Checkers/ClimbingRays"]
enabled = true
cast_to = Vector3( 0, -0.7, 0 )
collision_mask = 12
collide_with_areas = true

[node name="Ray2" type="RayCast" parent="Checkers/ClimbingRays"]
transform = Transform( 1, 0, 0, 0, 0.866025, -0.5, 0, 0.5, 0.866025, 0, 0, 0 )
enabled = true
cast_to = Vector3( 0, -0.7, 0 )
collision_mask = 12
collide_with_areas = true

[node name="Ray3" type="RayCast" parent="Checkers/ClimbingRays"]
transform = Transform( 1, 0, 0, 0, 0.5, -0.866025, 0, 0.866025, 0.5, 0, 0, 0 )
enabled = true
cast_to = Vector3( 0, -0.7, 0 )
collision_mask = 12
collide_with_areas = true

[node name="Ray4" type="RayCast" parent="Checkers/ClimbingRays"]
transform = Transform( 1, 0, 0, 0, 0, -1, 0, 1, 0, 0, 0, 0 )
enabled = true
cast_to = Vector3( 0, -0.7, 0 )
collision_mask = 12
collide_with_areas = true

[node name="Ray5" type="RayCast" parent="Checkers/ClimbingRays"]
transform = Transform( 1, 0, 0, 0, 0.866025, 0.5, 0, -0.5, 0.866025, 0, 0, 0 )
enabled = true
cast_to = Vector3( 0, -0.7, 0 )
collision_mask = 12
collide_with_areas = true

[node name="Ray6" type="RayCast" parent="Checkers/ClimbingRays"]
transform = Transform( 1, 0, 0, 0, 0.5, 0.866025, 0, -0.866025, 0.5, 0, 0, 0 )
enabled = true
cast_to = Vector3( 0, -0.7, 0 )
collision_mask = 12
collide_with_areas = true

[node name="Ray7" type="RayCast" parent="Checkers/ClimbingRays"]
transform = Transform( 1, 0, 0, 0, 8.74228e-08, 1, 0, -1, 8.74228e-08, 0, 0, 0 )
enabled = true
cast_to = Vector3( 0, -0.7, 0 )
collision_mask = 12
collide_with_areas = true

[node name="Ray18" type="RayCast" parent="Checkers/ClimbingRays"]
transform = Transform( 0.707107, 0.707107, 3.09086e-08, 0, -4.37114e-08, 1, 0.707107, -0.707107, -3.09086e-08, 0, 0, 0 )
enabled = true
cast_to = Vector3( 0, -0.7, 0 )
collision_mask = 12
collide_with_areas = true

[node name="Ray19" type="RayCast" parent="Checkers/ClimbingRays"]
transform = Transform( 0.707107, -0.707107, -3.09086e-08, 0, -4.37114e-08, 1, -0.707107, -0.707107, -3.09086e-08, 0, 0, 0 )
enabled = true
cast_to = Vector3( 0, -0.7, 0 )
collision_mask = 12
collide_with_areas = true

[node name="Ray20" type="RayCast" parent="Checkers/ClimbingRays"]
transform = Transform( -0.707107, -0.707107, -3.09086e-08, 0, -4.37114e-08, 1, -0.707107, 0.707107, 3.09086e-08, 0, 0, 0 )
enabled = true
cast_to = Vector3( 0, -0.7, 0 )
collision_mask = 12
collide_with_areas = true

[node name="Ray21" type="RayCast" parent="Checkers/ClimbingRays"]
transform = Transform( -0.707107, 0.707107, 3.09086e-08, 0, -4.37114e-08, 1, 0.707107, 0.707107, 3.09086e-08, 0, 0, 0 )
enabled = true
cast_to = Vector3( 0, -0.7, 0 )
collision_mask = 12
collide_with_areas = true

[node name="Ray8" type="RayCast" parent="Checkers/ClimbingRays"]
transform = Transform( 0.866025, -0.5, 0, 0.5, 0.866025, 0, 0, 0, 1, 0, 0, 0 )
enabled = true
cast_to = Vector3( 0, -0.7, 0 )
collision_mask = 12
collide_with_areas = true

[node name="Ray9" type="RayCast" parent="Checkers/ClimbingRays"]
transform = Transform( 0.866025, 0.5, 0, -0.5, 0.866025, 0, 0, 0, 1, 0, 0, 0 )
enabled = true
cast_to = Vector3( 0, -0.7, 0 )
collision_mask = 12
collide_with_areas = true

[node name="Ray10" type="RayCast" parent="Checkers/ClimbingRays"]
transform = Transform( 0.5, 0.866025, 0, -0.866025, 0.5, 0, 0, 0, 1, 0, 0, 0 )
enabled = true
cast_to = Vector3( 0, -0.7, 0 )
collision_mask = 12
collide_with_areas = true

[node name="Ray11" type="RayCast" parent="Checkers/ClimbingRays"]
transform = Transform( 0.5, -0.866025, 0, 0.866025, 0.5, 0, 0, 0, 1, 0, 0, 0 )
enabled = true
cast_to = Vector3( 0, -0.7, 0 )
collision_mask = 12
collide_with_areas = true

[node name="Ray14" type="RayCast" parent="Checkers/ClimbingRays"]
transform = Transform( 0.353553, -0.612372, 0.707107, 0.866025, 0.5, 0, -0.353553, 0.612372, 0.707107, 0, 0, 0 )
enabled = true
cast_to = Vector3( 0, -0.7, 0 )
collision_mask = 12
collide_with_areas = true

[node name="Ray15" type="RayCast" parent="Checkers/ClimbingRays"]
transform = Transform( 0.353553, -0.612372, -0.707107, 0.866025, 0.5, 0, 0.353553, -0.612372, 0.707107, 0, 0, 0 )
enabled = true
cast_to = Vector3( 0, -0.7, 0 )
collision_mask = 12
collide_with_areas = true

[node name="Ray16" type="RayCast" parent="Checkers/ClimbingRays"]
transform = Transform( -0.353553, 0.612372, -0.707107, 0.866025, 0.5, 0, 0.353553, -0.612372, -0.707107, 0, 0, 0 )
enabled = true
cast_to = Vector3( 0, -0.7, 0 )
collision_mask = 12
collide_with_areas = true

[node name="Ray17" type="RayCast" parent="Checkers/ClimbingRays"]
transform = Transform( -0.353553, 0.612372, 0.707107, 0.866025, 0.5, 0, -0.353553, 0.612372, -0.707107, 0, 0, 0 )
enabled = true
cast_to = Vector3( 0, -0.7, 0 )
collision_mask = 12
collide_with_areas = true

[node name="Ray12" type="RayCast" parent="Checkers/ClimbingRays"]
transform = Transform( -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0 )
enabled = true
cast_to = Vector3( 0, -0.7, 0 )
collision_mask = 12
collide_with_areas = true

[node name="Ray13" type="RayCast" parent="Checkers/ClimbingRays"]
transform = Transform( -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0 )
enabled = true
cast_to = Vector3( 0, -0.7, 0 )
collision_mask = 12
collide_with_areas = true

[node name="Ray22" type="RayCast" parent="Checkers/ClimbingRays"]
transform = Transform( 1, 0, 0, 0, -0.5, 0.866025, 0, -0.866025, -0.5, 0, 0, 0 )
enabled = true
cast_to = Vector3( 0, -0.7, 0 )
collision_mask = 12
collide_with_areas = true

[node name="Ray23" type="RayCast" parent="Checkers/ClimbingRays"]
transform = Transform( 1, 0, 0, 0, -0.5, -0.866025, 0, 0.866025, -0.5, 0, 0, 0 )
enabled = true
cast_to = Vector3( 0, -0.7, 0 )
collision_mask = 12
collide_with_areas = true

[node name="Ray24" type="RayCast" parent="Checkers/ClimbingRays"]
transform = Transform( 1, 0, 0, 0, -0.866025, 0.5, 0, -0.5, -0.866025, 0, 0, 0 )
enabled = true
cast_to = Vector3( 0, -0.7, 0 )
collision_mask = 12
collide_with_areas = true

[node name="Ray25" type="RayCast" parent="Checkers/ClimbingRays"]
transform = Transform( 1, 0, 0, 0, -0.866025, -0.5, 0, 0.5, -0.866025, 0, 0, 0 )
enabled = true
cast_to = Vector3( 0, -0.7, 0 )
collision_mask = 12
collide_with_areas = true

[node name="Ray26" type="RayCast" parent="Checkers/ClimbingRays"]
transform = Transform( 1, 0, 0, 0, -1, 8.74228e-08, 0, -8.74228e-08, -1, 0, 0, 0 )
enabled = true
cast_to = Vector3( 0, -0.7, 0 )
collision_mask = 12
collide_with_areas = true

[node name="Ray27" type="RayCast" parent="Checkers/ClimbingRays"]
transform = Transform( 0.866026, 0.5, -8.74228e-08, 0.5, -0.866025, 0, -7.57104e-08, -4.37114e-08, -1, 0, 0, 0 )
enabled = true
cast_to = Vector3( 0, -0.7, 0 )
collision_mask = 12
collide_with_areas = true

[node name="Ray28" type="RayCast" parent="Checkers/ClimbingRays"]
transform = Transform( 0.866026, -0.5, 8.74228e-08, -0.5, -0.866025, 0, 7.57104e-08, -4.37114e-08, -1, 0, 0, 0 )
enabled = true
cast_to = Vector3( 0, -0.7, 0 )
collision_mask = 12
collide_with_areas = true

[node name="Ray29" type="RayCast" parent="Checkers/ClimbingRays"]
transform = Transform( 0.5, -0.866025, -8.74228e-08, -0.866025, -0.5, 0, -4.37114e-08, 7.57103e-08, -1, 0, 0, 0 )
enabled = true
cast_to = Vector3( 0, -0.7, 0 )
collision_mask = 12
collide_with_areas = true

[node name="Ray31" type="RayCast" parent="Checkers/ClimbingRays"]
transform = Transform( 0.353553, -0.612372, -0.707107, -0.866025, -0.5, 0, -0.353553, 0.612372, -0.707107, 0, 0, 0 )
enabled = true
cast_to = Vector3( 0, -0.7, 0 )
collision_mask = 12
collide_with_areas = true

[node name="Ray32" type="RayCast" parent="Checkers/ClimbingRays"]
transform = Transform( 0.353553, -0.612372, 0.707107, -0.866025, -0.5, 0, 0.353553, -0.612372, -0.707107, 0, 0, 0 )
enabled = true
cast_to = Vector3( 0, -0.7, 0 )
collision_mask = 12
collide_with_areas = true

[node name="Ray33" type="RayCast" parent="Checkers/ClimbingRays"]
transform = Transform( -0.353553, 0.612372, 0.707107, -0.866025, -0.5, 0, 0.353553, -0.612372, 0.707107, 0, 0, 0 )
enabled = true
cast_to = Vector3( 0, -0.7, 0 )
collision_mask = 12
collide_with_areas = true

[node name="Ray34" type="RayCast" parent="Checkers/ClimbingRays"]
transform = Transform( -0.353553, 0.612372, -0.707107, -0.866025, -0.5, 0, -0.353553, 0.612372, 0.707107, 0, 0, 0 )
enabled = true
cast_to = Vector3( 0, -0.7, 0 )
collision_mask = 12
collide_with_areas = true

[node name="Ray30" type="RayCast" parent="Checkers/ClimbingRays"]
transform = Transform( 0.5, 0.866025, -8.74228e-08, 0.866025, -0.5, 0, -4.37114e-08, -7.57103e-08, -1, 0, 0, 0 )
enabled = true
cast_to = Vector3( 0, -0.7, 0 )
collision_mask = 12
collide_with_areas = true

[node name="IK" type="Spatial" parent="."]
visible = false

[node name="EyeMainControl" type="Position3D" parent="IK"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.75, -0.9 )
visible = false

[node name="Gui" type="Node" parent="."]

[node name="InteractionLabel" type="RichTextLabel" parent="Gui"]
anchor_left = 0.4
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -131.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource( 9 )
bbcode_enabled = true
bbcode_text = "Press A to Interact"
text = "Press A to Interact"
scroll_active = false

[node name="TimerPoison" type="Timer" parent="Gui"]
wait_time = 0.5

[node name="Proximity" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Proximity"]
transform = Transform( 15, 0, 0, 0, 15, 0, 0, 0, 15, 0, 0, 0 )
shape = SubResource( 31 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_process_mode = 0
playback_default_blend_time = 0.2
anims/RESET = SubResource( 41 )
anims/SnailFall = ExtResource( 26 )
anims/SnailFlip = ExtResource( 16 )
anims/SnailHidden = ExtResource( 15 )
anims/SnailHide = ExtResource( 5 )
anims/SnailIdle = ExtResource( 3 )
anims/SnailJump = ExtResource( 27 )
anims/SnailMove = ExtResource( 4 )
anims/SnailRollBack = ExtResource( 17 )
anims/SnailRollFront = ExtResource( 14 )

[node name="DebugHealthBar" parent="." instance=ExtResource( 1 )]

[connection signal="area_entered" from="AffectArea" to="." method="_on_Area_area_entered"]
